Fix grape input spacing

--- a/web/front_end/vinoteca-style.sass
+++ b/web/front_end/vinoteca-style.sass
@@ -269,7 +269,8 @@ img
     margin-bottom: 0
 
 .grape-block
-  padding: 0 !important
+  .no-padding
+    padding: 0 !important
 
 /** Change toggle switch color */
 .switch label input[type=checkbox]:checked+.lever
